# mcp-sentinel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
mcp_sentinel/: __init__.py  cli.py  lockfile.py  rules.py  scanner.py
rust/: Cargo.toml
rust/src/: canonical.rs  lib.rs  lockfile.rs  main.rs  rules.rs  scanner.rs
rust/tests/: cli.rs
rust/tests/fixtures/: risky.json
tests/: cross_lang_diff.sh  test_cli.py  test_lockfile.py  test_rules.py  test_scanner.py
tests/fixtures/: clean.json
