[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-sentinel"
version = "0.3.0"
description = "Offline risk scanner + lockfile/drift detection for MCP (Model Context Protocol) client configs -- zero network calls, zero dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Bharat Singh Parihar" }]
keywords = ["mcp", "model-context-protocol", "security", "supply-chain", "lockfile", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Security",
  "Environment :: Console",
]

[project.scripts]
mcp-sentinel = "mcp_sentinel.cli:main"

[project.urls]
Homepage = "https://github.com/bharat3645/mcp-sentinel"
Issues = "https://github.com/bharat3645/mcp-sentinel/issues"

[tool.setuptools.packages.find]
include = ["mcp_sentinel*"]
